# tloc-tool

./: CMakeLists.txt  README.md  fileparser.cpp  fileparser.h  main.cpp
tests/: test_fileparser.cpp
